Fix bugs & update UI

--- a/product.html
+++ b/product.html
@@ -166,7 +166,7 @@
         </section>
         
         <!--Footer-->
-        <footer class="footer  wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
+        <footer class="footer">
             <div class="above-wrapper ">
                 <div class="above-info">
                     <div class="above-info-wrapper">
