Update Product Page

--- a/product.html
+++ b/product.html
@@ -163,6 +163,128 @@
                     </a>
                 </div>
             </div>
+
+            <div class="product__detail--wrapper">
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/y51.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y51</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/x50-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>X50 Pro</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/y12s-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y12S</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/y20-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y20</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/x50-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>X50 Pro</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/y20-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y20</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/y51.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y51</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/x50-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>X50 Pro</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/y12s-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y12S</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/y51.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y51</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/x50-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>X50 Pro</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+                <div class="product__detail">
+                    <div class="product__img">
+                        <img src="./assets/img/y12s-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y12S</span>
+                    </div>
+                    <button class="product__btn">Tìm hiểu thêm</button>
+                </div>
+            </div>
+
+            <div class="product__foryou">
+                <div class="product__foryou--img">
+                    <img src="./assets/img/group-phone.png" alt="foryou">
+                </div>
+                <div class="product__foryou--title">
+                    <p>Chọn điện thoại dành cho bạn</p>
+                    <button class="compare-btn">So sánh chi tiết</button>
+                </div>
+            </div>
+            
         </section>
         
         <!--Footer-->
