--- a/support.html
+++ b/support.html
@@ -365,7 +365,7 @@
                     </div>
                 </div>
     
-                <div onclick="topFunction()" class="back-to-top">
+                <div class="back-to-top">
                     <i class='bx bx-up-arrow-circle'></i>
                     <p><b>BACK TO TOP</b></p> 
                 </div>
