Update Product Page

--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                         <div class="type-describe">
                             Smartphone cao cấp tiên phong công nghệ
                         </div>
-                        <button onclick="Maintaining()" class="btn-more">Tìm Hiểu Thêm</button>
+                        <form action="./product.html">
+                            <button type="submit" class="btn-more">Tìm Hiểu Thêm</button>
+                        </form>
                     </div>
                 </div>
                 <div class="type-img-wrapper wow fadeInUp" data-wow-offset="250"  data-wow-iteration="1">
@@ -157,7 +159,9 @@
                         <div class="type-describe">
                             Smartphone thời thượng dẫn đầu xu hướng
                         </div>
-                        <button onclick="Maintaining()" class="btn-more">Tìm Hiểu Thêm</button>
+                        <form action="./product.html">
+                            <button type="submit" class="btn-more">Tìm Hiểu Thêm</button>
+                        </form>
                     </div>
                 </div>
                 <div class="type-img-wrapper wow fadeInRight" data-wow-offset="250"  data-wow-iteration="1">
@@ -170,7 +174,9 @@
                         <div class="type-describe">
                             Smartphone phổ thông dành cho mọi người
                         </div>
-                        <button onclick="Maintaining()" class="btn-more">Tìm Hiểu Thêm</button>
+                        <form action="./product.html">
+                            <button type="submit" class="btn-more">Tìm Hiểu Thêm</button>
+                        </form>
                     </div>
                 </div>
             </div>
