--- a/product.html
+++ b/product.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="./WOW-master/WOW-master/css/libs/animate.css">
 </head>
 
 <body>
@@ -165,117 +166,153 @@
             </div>
 
             <div class="product__detail--wrapper">
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="250"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/y51.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>Y51</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="260"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>X50 Pro</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="270"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/y12s-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>Y12S</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="280"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/y20-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>Y20</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>X50 Pro</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/y20-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>Y20</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/y51.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>Y51</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>X50 Pro</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/y12s-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>Y12S</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/y51.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>Y51</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/x50-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>X50 Pro</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
-                <div class="product__detail">
+                <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
                     <div class="product__img">
                         <img src="./assets/img/y12s-640x640.png" alt="y51">
                     </div>
                     <div class="product__name">
                         <span>Y12S</span>
                     </div>
-                    <button class="product__btn">Tìm hiểu thêm</button>
+                    <button class="product__btn">Đặt mua</button>
+                </div>
+                <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
+                    <div class="product__img">
+                        <img src="./assets/img/x50-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>X50 Pro</span>
+                    </div>
+                    <button class="product__btn">Đặt mua</button>
+                </div>
+                <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
+                    <div class="product__img">
+                        <img src="./assets/img/y12s-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y12S</span>
+                    </div>
+                    <button class="product__btn">Đặt mua</button>
+                </div>
+                <div class="product__detail wow fadeInDown" data-wow-offset="310"  data-wow-iteration="1"">
+                    <div class="product__img">
+                        <img src="./assets/img/y12s-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y12S</span>
+                    </div>
+                    <button class="product__btn">Đặt mua</button>
+                </div>
+                <div class="product__detail wow fadeInDown" data-wow-offset="300"  data-wow-iteration="1"">
+                    <div class="product__img">
+                        <img src="./assets/img/y20-640x640.png" alt="y51">
+                    </div>
+                    <div class="product__name">
+                        <span>Y20</span>
+                    </div>
+                    <button class="product__btn">Đặt mua</button>
                 </div>
             </div>
 
-            <div class="product__foryou">
+            <div class="product__foryou wow fadeInDown" data-wow-offset="280"  data-wow-iteration="1"">
                 <div class="product__foryou--img">
                     <img src="./assets/img/group-phone.png" alt="foryou">
                 </div>
@@ -411,4 +448,8 @@
         </footer>
 </body>
 <script src="./index.js"></script>
+<script src="./WOW-master/WOW-master/dist/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
 </html>
